@@ -1,12 +1,11 @@
 package com.epam.reportportal.base.core.tms.service;
 
-import com.epam.reportportal.base.infrastructure.persistence.entity.tms.TmsStep;
-import com.epam.reportportal.base.infrastructure.persistence.dao.tms.TmsStepAttachmentRepository;
 import com.epam.reportportal.base.core.tms.dto.TmsStepRQ;
+import com.epam.reportportal.base.infrastructure.persistence.dao.tms.TmsStepAttachmentRepository;
+import com.epam.reportportal.base.infrastructure.persistence.entity.tms.TmsStep;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
@@ -23,22 +22,21 @@ public class TmsStepAttachmentServiceImpl implements TmsStepAttachmentService {
 
   @Override
   @Transactional
-  public void createAttachments(TmsStep tmsStep, TmsStepRQ stepRQ) {
+  public void createAttachments(Long projectId, TmsStep tmsStep, TmsStepRQ stepRq) {
     log.debug("Creating attachments for step: {}", tmsStep.getId());
 
-    if (stepRQ == null || CollectionUtils.isEmpty(stepRQ.getAttachments())) {
+    if (stepRq == null || CollectionUtils.isEmpty(stepRq.getAttachments())) {
       log.debug("No attachments to create for step: {}", tmsStep.getId());
       return;
     }
 
-    var attachmentIds = stepRQ
+    var attachmentIds = stepRq
         .getAttachments()
         .stream()
         .map(attachment -> Long.valueOf(attachment.getId()))
-        .collect(Collectors.toList());
+        .toList();
 
-    // Validate and get attachments
-    var attachments = tmsAttachmentService.getTmsAttachmentsByIds(attachmentIds);
+    var attachments = tmsAttachmentService.findAvailableAttachments(projectId, attachmentIds);
 
     if (CollectionUtils.isNotEmpty(attachments)) {
 
@@ -70,7 +68,7 @@ public class TmsStepAttachmentServiceImpl implements TmsStepAttachmentService {
 
     var stepIds = steps.stream()
         .map(TmsStep::getId)
-        .collect(Collectors.toList());
+        .toList();
 
     tmsStepAttachmentRepository.deleteByStepIdIn(stepIds);
     log.debug("Deleted all attachment relationships for {} steps", stepIds.size());
